@@ -6,6 +6,9 @@ ChangeLog
 
 GIT HEAD
 
+- Graph items are automatically moved to top when high-
+  lighted (dynamic z-value). (EXPERIMENTAL)
+
 - Add a little but straight horizontal line-gap to the
   Graph connections.
 
